--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         style="width: 100%; height: auto; display: block; margin: 0 auto;">
       
       <h2 class="content is-size-4 has-text-centered">
-      <strong>ETac: a lightweight and efficient tactile simulation framework. </strong> (a) ETac estimates elastomer surface deformations with FEM-level fidelity. (b) It enables large-area tactile sensing for dexterous manipulators while supporting large-scale RL training.
+      <strong>ETac: a lightweight and efficient tactile simulation framework. </strong> (a) ETac estimates elastomer surface deformations with fidelity comparable to that of FEM. (b) It enables large-area tactile sensing for dexterous manipulators while supporting large-scale RL training.
       </h2>
     </div>
   </div>
