--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       </h2>
       <figure class="image has-image-centered">
         <img 
-          src="static/gifs/exp1-1.gif" 
+          src="static/gifs/ind-flat.gif" 
         >
       </figure>
       <br>
@@ -195,7 +195,7 @@
       </h2>
       <figure class="image has-image-centered">
         <img 
-          src="static/gifs/exp1-2.gif" 
+          src="static/gifs/ind-curved.gif" 
         >
       </figure>
       <!-- <p class="content is-size-4 has-text-centered">
@@ -249,7 +249,7 @@
       </h2>
       <figure class="image has-image-centered">
         <img 
-          src="static/gifs/exp3-flat.gif" 
+          src="static/gifs/real-flat.gif" 
         >
       </figure>
 
@@ -258,7 +258,7 @@
       </h2>
       <figure class="image has-image-centered">
         <img 
-          src="static/gifs/exp3-curved.gif" 
+          src="static/gifs/real-curved.gif" 
         >
       </figure>
       <!-- <p class="content is-size-4 has-text-centered">
