--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
                     <div class="publication-links">
                          <!-- Arxiv PDF link -->
                       <span class="link-block">
-                        <a href="https://arxiv.org/pdf/<ARXIV PAPER ID>.pdf" target="_blank"
+                        <a href="" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
                         </span>
-                        <span>Paper</span>
+                        <span>Paper (Under Review)</span>
                       </a>
                     </span>
 
@@ -181,7 +181,7 @@
         <strong>High Fidelity Deformation Estimation</strong>  
       </h2> 
       <h2 class="has-text-centered is-size-4">
-        We evaluate ETac's simulation quality by estimating sensor elastomer deformation. Indentation experiments are conducted on two elastomer types: a flat elastomer and a curved BioTac-style elastomer.
+        We evaluated ETac's simulation quality by estimating sensor elastomer deformation. Indentation experiments are conducted on two elastomer types: a flat elastomer and a curved BioTac-style elastomer.
       </h2>
 
       <hr style="margin-top:0px">
@@ -287,7 +287,7 @@
       <hr style="margin-top:0px">
 
       <h2 class="subtitle is-size-4 has-text-centered">
-          We next evaluated ETac's effectiveness for training reinforcement learning policies in a vision-deprived blind grasping task, whose objective is to
+          We evaluated ETac's effectiveness for training reinforcement learning policies in a vision-deprived blind grasping task, whose objective is to
       manipulate and grasp a variety of objects according solely robot proprioception and tactile feedback.
         </h2>
       
